--- a/nbs/hello-world.ipynb
+++ b/nbs/hello-world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "39072002",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,56 @@
    ],
    "source": [
     "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2cfa5242",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import httpx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a6b7efe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am ordinary\n",
+      "I got decorated\n",
+      "I am ordinary\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_pretty(func):\n",
+    "    # define the inner function \n",
+    "    def inner():\n",
+    "        # add some additional behavior to decorated function\n",
+    "        print(\"I got decorated\")\n",
+    "\n",
+    "        # call original function\n",
+    "        func()\n",
+    "    # return the inner function\n",
+    "    return inner\n",
+    "\n",
+    "# define ordinary function\n",
+    "def ordinary():\n",
+    "    print(\"I am ordinary\")\n",
+    "\n",
+    "ordinary()\n",
+    "# decorate the ordinary function\n",
+    "ordinary = make_pretty(ordinary)\n",
+    "\n",
+    "# call the decorated function\n",
+    "ordinary()"
    ]
   }
  ],
